@@ -93,6 +93,18 @@ endif;
 				<li><?php echo $this->form->getLabel('language'); ?>
 				<?php echo $this->form->getInput('language'); ?></li>
 
+				<!-- Tag field -->
+				<?php foreach ($this->get('form')->getFieldset('jmetadata') as $field) : ?>
+					<?php if ($field->name == 'jform[metadata][tags][]') :?>
+						<li>
+							<?php echo $field->label; ?>
+							<div class="is-tagbox">
+								<?php echo $field->input; ?>
+							</div>
+						</li>
+					<?php endif; ?>
+				<?php endforeach; ?>
+
 				<li><?php echo $this->form->getLabel('id'); ?>
 				<?php echo $this->form->getInput('id'); ?></li>
 
@@ -182,10 +194,6 @@ endif;
 			<?php endforeach; ?>
 			<?php // Not the best place, but here for continuity with 1.5/1/6/1.7 ?>
 				<fieldset class="panelform">
-				<ul class="adminformlist">
-						<li><?php echo $this->form->getLabel('xreference'); ?>
-						<?php echo $this->form->getInput('xreference'); ?></li>
-				</ul>
 				</fieldset>
 				<?php
 					// We need to make a separate space for the configuration
