@@ -3416,3 +3416,6 @@ table {
 #mediamanager-form {
 	margin: 10px;
 }
+.is-tagbox {
+	float: left;
+}
